// Copyright 2022 The Engula Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package engula.storage.v1.manifest.metadata;

message VersionEdit {
	repeated string add_buckets = 3;
	repeated string remove_buckets = 4;
	map<string, BucketUpdate> update_buckets = 5;
}

message BucketUpdate {
	repeated NewBlob add_blobs = 1;
	repeated DeleteBlob delete_blobs = 2;
}

message NewBlob {
	string blob = 2;
	int32 level = 3;
	BlobStats stats = 4;
}

message BlobStats {
	bytes smallest = 1;
	bytes largest = 2;
	uint64 smallest_sequence = 3;
	uint64 largest_sequence = 4;
	int64 object_num = 5;
	int64 deletion_num = 6;
}

message DeleteBlob {
	string blob = 2;
	int32 level = 3;
}

message VersionEditList {
	repeated VersionEdit versions = 1;
}

